[gd_scene load_steps=11 format=4 uid="uid://dpirafy5lerin"]

[ext_resource type="TileSet" uid="uid://dryeg0hq3owkm" path="res://tilesets/tileset.tres" id="1_8aya4"]
[ext_resource type="Texture2D" uid="uid://bdpjq1kw46etx" path="res://Assets/Actor/Characters/EggBoy/SeparateAnim/levelthreeBG.png" id="1_ps0p0"]
[ext_resource type="Script" path="res://Scriptes/insideIgloo.gd" id="2_1ob72"]
[ext_resource type="Texture2D" uid="uid://ba7qy1etp3abb" path="res://Assets/Actor/Characters/EggBoy/SeparateAnim/Item.png" id="3_gwpf1"]
[ext_resource type="PackedScene" uid="uid://r5vda3y831wt" path="res://Scenes/player.tscn" id="4_2454q"]
[ext_resource type="AudioStream" uid="uid://d0v4i4tyq5irw" path="res://Assets/Sounds/ExternalSounds/acheivment.mp3" id="7_12ged"]
[ext_resource type="AudioStream" uid="uid://beau72jsqrdc5" path="res://Assets/Sounds/ExternalSounds/game-bonus-144751.mp3" id="8_ip2k0"]
[ext_resource type="AudioStream" uid="uid://cvfqink4qpo7y" path="res://Assets/Sounds/ExternalSounds/game-music-loop-6-144641.mp3" id="9_b1vsj"]
[ext_resource type="AudioStream" uid="uid://cgoog8g02osdv" path="res://Assets/Sounds/ExternalSounds/game-character-140506.mp3" id="10_3dh1o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rouva"]
radius = 153.029

[node name="main" type="Node"]

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -13.0
offset_top = -94.0
offset_right = 670.0
offset_bottom = 290.0
texture = ExtResource("1_ps0p0")

[node name="tileLayters" type="Node" parent="."]

[node name="GroundTileLayer" type="TileMapLayer" parent="tileLayters"]
position = Vector2(102, 3)
tile_map_data = PackedByteArray("AAAXABAAAAACABAAAAAXAA8AAAACAA8AAAAXAA4AAAACAA8AAAAXAA0AAAACAA8AAAAXAAwAAAACAA8AAAAXAAsAAAACAA8AAAAXAAoAAAACAA8AAAAXAAkAAAACAA8AAAAXAAgAAAACAA8AAAAXAAcAAAACAA8AAAAXAAYAAAACAA8AAAAXAAUAAAACAA8AAAAXAAQAAAACAA8AAAAXAAMAAAACAA8AAAAXAAIAAAACAA8AAAAXAAEAAAACAA8AAAAXAAAAAAACAA4AAAAWABAAAAABABAAAAAWAA8AAAABAA8AAAAWAA4AAAABAA8AAAAWAA0AAAABAA8AAAAWAAwAAAABAA8AAAAWAAsAAAABAA8AAAAWAAoAAAABABIAAAAWAAkAAAABAA8AAAAWAAgAAAABAA8AAAAWAAcAAAABAA8AAAAWAAYAAAABAA8AAAAWAAUAAAABAA8AAAAWAAQAAAABAA8AAAAWAAMAAAABAA8AAAAWAAIAAAABAA8AAAAWAAEAAAAAABIAAAAWAAAAAAABAA4AAAAVABAAAAABABAAAAAVAA8AAAABABIAAAAVAA4AAAABAA8AAAAVAA0AAAABAA8AAAAVAAwAAAABAA8AAAAVAAsAAAABAA8AAAAVAAoAAAABAA8AAAAVAAkAAAABAA8AAAAVAAgAAAABAA8AAAAVAAcAAAABAA8AAAAVAAYAAAABAA8AAAAVAAUAAAABAA8AAAAVAAQAAAABAA8AAAAVAAMAAAABAA8AAAAVAAIAAAABAA8AAAAVAAEAAAABAA8AAAAVAAAAAAABAA4AAAAUABAAAAABABAAAAAUAA8AAAABAA8AAAAUAA4AAAABAA8AAAAUAA0AAAABAA8AAAAUAAwAAAABAA8AAAAUAAsAAAABAA8AAAAUAAoAAAABAA8AAAAUAAkAAAABAA8AAAAUAAgAAAABABIAAAAUAAcAAAABAA8AAAAUAAYAAAABAA8AAAAUAAUAAAABAA8AAAAUAAQAAAABAA8AAAAUAAMAAAABAA8AAAAUAAIAAAABAA8AAAAUAAEAAAABAA8AAAAUAAAAAAABAA4AAAATABAAAAABABAAAAATAA8AAAABAA8AAAATAA4AAAABAA8AAAATAA0AAAABAA8AAAATAAwAAAABAA8AAAATAAsAAAABAA8AAAATAAoAAAABAA8AAAATAAkAAAABAA8AAAATAAgAAAABAA8AAAATAAcAAAABABIAAAATAAYAAAABAA8AAAATAAUAAAABAA8AAAATAAQAAAABAA8AAAATAAMAAAABAA8AAAATAAIAAAABAA8AAAATAAEAAAABAA8AAAATAAAAAAABAA4AAAASABAAAAABABAAAAASAA8AAAABAA8AAAASAA4AAAABAA8AAAASAA0AAAABAA8AAAASAAwAAAABABIAAAASAAsAAAABAA8AAAASAAoAAAABAA8AAAASAAkAAAABAA8AAAASAAgAAAABAA8AAAASAAcAAAABAA8AAAASAAYAAAABAA8AAAASAAUAAAABAA8AAAASAAQAAAABAA8AAAASAAMAAAABAA8AAAASAAIAAAABAA8AAAASAAEAAAABABIAAAASAAAAAAABAA4AAAARABAAAAABABAAAAARAA8AAAABAA8AAAARAA4AAAABAA8AAAARAA0AAAABAA8AAAARAAwAAAABAA8AAAARAAsAAAABAA8AAAARAAoAAAABAA8AAAARAAkAAAABAA8AAAARAAgAAAABAA8AAAARAAcAAAABAA8AAAARAAYAAAABAA8AAAARAAUAAAABAA8AAAARAAQAAAABAA8AAAARAAMAAAABAA8AAAARAAIAAAABAA8AAAARAAEAAAABAA8AAAARAAAAAAABAA4AAAAQABAAAAABABAAAAAQAA8AAAABAA8AAAAQAA4AAAABAA8AAAAQAA0AAAABAA8AAAAQAAwAAAABAA8AAAAQAAsAAAABAA8AAAAQAAoAAAABAA8AAAAQAAkAAAABAA8AAAAQAAgAAAABAA8AAAAQAAcAAAABAA8AAAAQAAYAAAABAA8AAAAQAAUAAAABAA8AAAAQAAQAAAABAA8AAAAQAAMAAAABAA8AAAAQAAIAAAABAA8AAAAQAAEAAAABAA8AAAAQAAAAAAABAA4AAAAPABAAAAABABAAAAAPAA8AAAABAA8AAAAPAA4AAAABAA8AAAAPAA0AAAABAA8AAAAPAAwAAAABAA8AAAAPAAsAAAABAA8AAAAPAAoAAAABAA8AAAAPAAkAAAABAA8AAAAPAAgAAAABAA8AAAAPAAcAAAABAA8AAAAPAAYAAAABAA8AAAAPAAUAAAABAA8AAAAPAAQAAAABAA8AAAAPAAMAAAABAA8AAAAPAAIAAAABAA8AAAAPAAEAAAABAA8AAAAPAAAAAAABAA4AAAAOABAAAAABABAAAAAOAA8AAAABAA8AAAAOAA4AAAABAA8AAAAOAA0AAAABAA8AAAAOAAwAAAABAA8AAAAOAAsAAAABAA8AAAAOAAoAAAAAABIAAAAOAAkAAAAAABIAAAAOAAgAAAABAA8AAAAOAAcAAAABAA8AAAAOAAYAAAABAA8AAAAOAAUAAAABAA8AAAAOAAQAAAABAA8AAAAOAAMAAAABAA8AAAAOAAIAAAABAA8AAAAOAAEAAAABAA8AAAAOAAAAAAABAA4AAAANABAAAAABABAAAAANAA8AAAABAA8AAAANAA4AAAABAA8AAAANAA0AAAABAA8AAAANAAwAAAABAA8AAAANAAsAAAABAA8AAAANAAoAAAABAA8AAAANAAkAAAABAA8AAAANAAgAAAABAA8AAAANAAcAAAABAA8AAAANAAYAAAABAA8AAAANAAUAAAABAA8AAAANAAQAAAABAA8AAAANAAMAAAABAA8AAAANAAIAAAABAA8AAAANAAEAAAABAA8AAAANAAAAAAABAA4AAAAMABAAAAABABAAAAAMAA8AAAAAABIAAAAMAA4AAAABAA8AAAAMAA0AAAABAA8AAAAMAAwAAAABAA8AAAAMAAsAAAABAA8AAAAMAAoAAAABAA8AAAAMAAkAAAABAA8AAAAMAAgAAAABAA8AAAAMAAcAAAABAA8AAAAMAAYAAAABAA8AAAAMAAUAAAABAA8AAAAMAAQAAAABABIAAAAMAAMAAAABAA8AAAAMAAIAAAABAA8AAAAMAAEAAAABAA8AAAAMAAAAAAABAA4AAAALABAAAAABABAAAAALAA8AAAAAABIAAAALAA4AAAABAA8AAAALAA0AAAABABIAAAALAAwAAAABAA8AAAALAAsAAAABAA8AAAALAAoAAAABABIAAAALAAkAAAABAA8AAAALAAgAAAAAABIAAAALAAcAAAABAA8AAAALAAYAAAABAA8AAAALAAUAAAABAA8AAAALAAQAAAABAA8AAAALAAMAAAABAA8AAAALAAIAAAABAA8AAAALAAEAAAABAA8AAAALAAAAAAABAA4AAAAKABAAAAABABAAAAAKAA8AAAABAA8AAAAKAA4AAAABAA8AAAAKAA0AAAABAA8AAAAKAAwAAAABAA8AAAAKAAsAAAABAA8AAAAKAAoAAAABAA8AAAAKAAkAAAABAA8AAAAKAAgAAAABAA8AAAAKAAcAAAABAA8AAAAKAAYAAAABAA8AAAAKAAUAAAABAA8AAAAKAAQAAAABAA8AAAAKAAMAAAABAA8AAAAKAAIAAAABAA8AAAAKAAEAAAABAA8AAAAKAAAAAAABAA4AAAAJABAAAAABABAAAAAJAA8AAAABAA8AAAAJAA4AAAABAA8AAAAJAA0AAAAAABIAAAAJAAwAAAABAA8AAAAJAAsAAAABAA8AAAAJAAoAAAABAA8AAAAJAAkAAAABAA8AAAAJAAgAAAABAA8AAAAJAAcAAAABAA8AAAAJAAYAAAABAA8AAAAJAAUAAAABAA8AAAAJAAQAAAABAA8AAAAJAAMAAAABAA8AAAAJAAIAAAABAA8AAAAJAAEAAAABAA8AAAAJAAAAAAABAA4AAAAIABAAAAABABAAAAAIAA8AAAABAA8AAAAIAA4AAAABAA8AAAAIAA0AAAABAA8AAAAIAAwAAAABABIAAAAIAAsAAAAAABIAAAAIAAoAAAAAABIAAAAIAAkAAAABAA8AAAAIAAgAAAABAA8AAAAIAAcAAAABAA8AAAAIAAYAAAABAA8AAAAIAAUAAAABAA8AAAAIAAQAAAABAA8AAAAIAAMAAAABAA8AAAAIAAIAAAABAA8AAAAIAAEAAAABAA8AAAAIAAAAAAABAA4AAAAHABAAAAABABAAAAAHAA8AAAABAA8AAAAHAA4AAAABABIAAAAHAA0AAAABAA8AAAAHAAwAAAABAA8AAAAHAAsAAAABAA8AAAAHAAoAAAABAA8AAAAHAAkAAAABAA8AAAAHAAgAAAABAA8AAAAHAAcAAAABAA8AAAAHAAYAAAABAA8AAAAHAAUAAAABAA8AAAAHAAQAAAABAA8AAAAHAAMAAAABAA8AAAAHAAIAAAABAA8AAAAHAAEAAAABAA8AAAAHAAAAAAABAA4AAAAGABAAAAABABAAAAAGAA8AAAABAA8AAAAGAA4AAAABAA8AAAAGAA0AAAABAA8AAAAGAAwAAAABAA8AAAAGAAsAAAABAA8AAAAGAAoAAAABAA8AAAAGAAkAAAABAA8AAAAGAAgAAAABAA8AAAAGAAcAAAABAA8AAAAGAAYAAAABAA8AAAAGAAUAAAAAABIAAAAGAAQAAAAAABIAAAAGAAMAAAABAA8AAAAGAAIAAAABAA8AAAAGAAEAAAABAA8AAAAGAAAAAAABAA4AAAAFABAAAAABABAAAAAFAA8AAAABAA8AAAAFAA4AAAABAA8AAAAFAA0AAAABAA8AAAAFAAwAAAABAA8AAAAFAAsAAAABAA8AAAAFAAoAAAABAA8AAAAFAAkAAAAAABIAAAAFAAgAAAABAA8AAAAFAAcAAAABAA8AAAAFAAYAAAABAA8AAAAFAAUAAAABAA8AAAAFAAQAAAABAA8AAAAFAAMAAAABAA8AAAAFAAIAAAABAA8AAAAFAAEAAAABAA8AAAAFAAAAAAABAA4AAAAEABAAAAABABAAAAAEAA8AAAABAA8AAAAEAA4AAAABAA8AAAAEAA0AAAABAA8AAAAEAAwAAAABAA8AAAAEAAsAAAABAA8AAAAEAAoAAAABAA8AAAAEAAkAAAABAA8AAAAEAAgAAAABAA8AAAAEAAcAAAABAA8AAAAEAAYAAAABAA8AAAAEAAUAAAABABIAAAAEAAQAAAABAA8AAAAEAAMAAAABAA8AAAAEAAIAAAABAA8AAAAEAAEAAAAAABIAAAAEAAAAAAABAA4AAAADABAAAAABABAAAAADAA8AAAABAA8AAAADAA4AAAABAA8AAAADAA0AAAABAA8AAAADAAwAAAABAA8AAAADAAsAAAABAA8AAAADAAoAAAABAA8AAAADAAkAAAABAA8AAAADAAgAAAABAA8AAAADAAcAAAABAA8AAAADAAYAAAABAA8AAAADAAUAAAABAA8AAAADAAQAAAABAA8AAAADAAMAAAABAA8AAAADAAIAAAABAA8AAAADAAEAAAABAA8AAAADAAAAAAABAA4AAAACABAAAAABABAAAAACAA8AAAABAA8AAAACAA4AAAABAA8AAAACAA0AAAABAA8AAAACAAwAAAAAABIAAAACAAsAAAABAA8AAAACAAoAAAABAA8AAAACAAkAAAABAA8AAAACAAgAAAABABIAAAACAAcAAAABAA8AAAACAAYAAAAAABIAAAACAAUAAAABAA8AAAACAAQAAAABAA8AAAACAAMAAAABAA8AAAACAAIAAAABAA8AAAACAAEAAAABAA8AAAACAAAAAAABAA4AAAABABAAAAABABAAAAABAA8AAAABAA8AAAABAA4AAAABAA8AAAABAA0AAAABAA8AAAABAAwAAAABAA8AAAABAAsAAAABAA8AAAABAAoAAAABAA8AAAABAAkAAAABAA8AAAABAAgAAAABAA8AAAABAAcAAAABAA8AAAABAAYAAAABAA8AAAABAAUAAAABAA8AAAABAAQAAAABAA8AAAABAAMAAAABAA8AAAABAAIAAAABAA8AAAABAAEAAAABAA8AAAABAAAAAAABAA4AAAAAABAAAAABABAAAAAAAA8AAAABAA8AAAAAAA4AAAABAA8AAAAAAA0AAAABAA8AAAAAAAwAAAABAA8AAAAAAAsAAAABAA8AAAAAAAoAAAABABIAAAAAAAkAAAABAA8AAAAAAAgAAAABAA8AAAAAAAcAAAABAA8AAAAAAAYAAAABAA8AAAAAAAUAAAABAA8AAAAAAAQAAAABAA8AAAAAAAMAAAABAA8AAAAAAAIAAAABAA8AAAAAAAEAAAABAA8AAAAAAAAAAAABAA4AAAD//xAAAAABABAAAAD//w8AAAABAA8AAAD//w4AAAABAA8AAAD//w0AAAABABIAAAD//wwAAAABAA8AAAD//wsAAAABAA8AAAD//woAAAABAA8AAAD//wkAAAABAA8AAAD//wgAAAABAA8AAAD//wcAAAABAA8AAAD//wYAAAABABIAAAD//wUAAAABAA8AAAD//wQAAAABAA8AAAD//wMAAAABAA8AAAD//wIAAAABAA8AAAD//wEAAAABAA8AAAD//wAAAAABAA4AAAD+/xAAAAABABAAAAD+/w8AAAABAA8AAAD+/w4AAAABAA8AAAD+/w0AAAABAA8AAAD+/wwAAAABAA8AAAD+/wsAAAABAA8AAAD+/woAAAABAA8AAAD+/wkAAAABAA8AAAD+/wgAAAABAA8AAAD+/wcAAAABAA8AAAD+/wYAAAABAA8AAAD+/wUAAAABAA8AAAD+/wQAAAABAA8AAAD+/wMAAAABAA8AAAD+/wIAAAABAA8AAAD+/wEAAAABAA8AAAD+/wAAAAABAA4AAAD9/xAAAAABABAAAAD9/w8AAAABAA8AAAD9/w4AAAABAA8AAAD9/w0AAAABAA8AAAD9/wwAAAABAA8AAAD9/wsAAAABAA8AAAD9/woAAAABAA8AAAD9/wkAAAABAA8AAAD9/wgAAAABAA8AAAD9/wcAAAAAABIAAAD9/wYAAAABAA8AAAD9/wUAAAABAA8AAAD9/wQAAAABAA8AAAD9/wMAAAABAA8AAAD9/wIAAAABAA8AAAD9/wEAAAABAA8AAAD9/wAAAAABAA4AAAD8/xAAAAABABAAAAD8/w8AAAABAA8AAAD8/w4AAAABAA8AAAD8/w0AAAAAABIAAAD8/wwAAAABAA8AAAD8/wsAAAABAA8AAAD8/woAAAABAA8AAAD8/wkAAAABAA8AAAD8/wgAAAABABIAAAD8/wcAAAABAA8AAAD8/wYAAAABAA8AAAD8/wUAAAABAA8AAAD8/wQAAAABAA8AAAD8/wMAAAAAABIAAAD8/wIAAAABAA8AAAD8/wEAAAABAA8AAAD8/wAAAAABAA4AAAD7/xAAAAABABAAAAD7/w8AAAAAABIAAAD7/w4AAAABAA8AAAD7/w0AAAABAA8AAAD7/wwAAAABAA8AAAD7/wsAAAABAA8AAAD7/woAAAABAA8AAAD7/wkAAAABAA8AAAD7/wgAAAABAA8AAAD7/wcAAAABABIAAAD7/wYAAAABAA8AAAD7/wUAAAABAA8AAAD7/wQAAAABAA8AAAD7/wMAAAABABIAAAD7/wIAAAABAA8AAAD7/wEAAAABAA8AAAD7/wAAAAABAA4AAAD6/xAAAAABABAAAAD6/w8AAAABAA8AAAD6/w4AAAABAA8AAAD6/w0AAAABAA8AAAD6/wwAAAABAA8AAAD6/wsAAAABAA8AAAD6/woAAAABABIAAAD6/wkAAAABAA8AAAD6/wgAAAABAA8AAAD6/wcAAAABAA8AAAD6/wYAAAABAA8AAAD6/wUAAAABABIAAAD6/wQAAAABABIAAAD6/wMAAAABAA8AAAD6/wIAAAABAA8AAAD6/wEAAAABAA8AAAD6/wAAAAABAA4AAAD5/xAAAAAAABAAAAD5/w8AAAAAAA8AAAD5/w4AAAAAAA8AAAD5/w0AAAAAAA8AAAD5/wwAAAAAAA8AAAD5/wsAAAAAAA8AAAD5/woAAAAAAA8AAAD5/wkAAAAAAA8AAAD5/wgAAAAAAA8AAAD5/wcAAAAAAA8AAAD5/wYAAAAAAA8AAAD5/wUAAAAAAA8AAAD5/wQAAAAAAA8AAAD5/wMAAAAAAA8AAAD5/wIAAAAAAA8AAAD5/wEAAAAAAA8AAAD5/wAAAAAAAA4AAAAXAP//AgAGAAIAAAAXAP7/AgAGAAEAAAAXAP3/AgAGAAEAAAAXAPz/AgAGAAEAAAAXAPv/AgAGAAEAAAAXAPr/AgAGAAEAAAAXAPn/AgAGAAEAAAAXAPj/AgAGAAAAAAAWAP//AgAFAAIAAAAWAP7/AgAFAAEAAAAWAP3/AgAFAAEAAAAWAPz/AgAFAAEAAAAWAPv/AgAFAAEAAAAWAPr/AgAFAAEAAAAWAPn/AgAFAAEAAAAWAPj/AgAFAAAAAAAVAP//AgAFAAIAAAAVAP7/AgAFAAEAAAAVAP3/AgAFAAEAAAAVAPz/AgAFAAEAAAAVAPv/AgAFAAEAAAAVAPr/AgAFAAEAAAAVAPn/AgAFAAEAAAAVAPj/AgAFAAAAAAAUAP//AgAFAAIAAAAUAP7/AgAFAAEAAAAUAP3/AgAFAAEAAAAUAPz/AgAFAAEAAAAUAPv/AgAFAAEAAAAUAPr/AgAFAAEAAAAUAPn/AgAFAAEAAAAUAPj/AgAFAAAAAAATAP//AgAFAAIAAAATAP7/AgAFAAEAAAATAP3/AgAFAAEAAAATAPz/AgAFAAEAAAATAPv/AgAFAAEAAAATAPr/AgAFAAEAAAATAPn/AgAFAAEAAAATAPj/AgAFAAAAAAASAP//AgAFAAIAAAASAP7/AgAFAAEAAAASAP3/AgAFAAEAAAASAPz/AgAFAAEAAAASAPv/AgAFAAEAAAASAPr/AgAFAAEAAAASAPn/AgAFAAEAAAASAPj/AgAFAAAAAAARAP//AgAFAAIAAAARAP7/AgAFAAEAAAARAP3/AgAFAAEAAAARAPz/AgAFAAEAAAARAPv/AgAFAAEAAAARAPr/AgAFAAEAAAARAPn/AgAFAAEAAAARAPj/AgAFAAAAAAAQAP//AgAFAAIAAAAQAP7/AgAFAAEAAAAQAP3/AgAFAAEAAAAQAPz/AgAFAAEAAAAQAPv/AgAFAAEAAAAQAPr/AgAFAAEAAAAQAPn/AgAFAAEAAAAQAPj/AgAFAAAAAAAPAP//AgAFAAIAAAAPAP7/AgAFAAEAAAAPAP3/AgAFAAEAAAAPAPz/AgAFAAEAAAAPAPv/AgAFAAEAAAAPAPr/AgAFAAEAAAAPAPn/AgAFAAEAAAAPAPj/AgAFAAAAAAAOAP//AgAFAAIAAAAOAP7/AgAFAAEAAAAOAP3/AgAFAAEAAAAOAPz/AgAFAAEAAAAOAPv/AgAFAAEAAAAOAPr/AgAFAAEAAAAOAPn/AgAFAAEAAAAOAPj/AgAFAAAAAAANAP//AgAFAAIAAAANAP7/AgAFAAEAAAANAP3/AgAFAAEAAAANAPz/AgAFAAEAAAANAPv/AgAFAAEAAAANAPr/AgAFAAEAAAANAPn/AgAFAAEAAAANAPj/AgAFAAAAAAAMAP//AgAFAAIAAAAMAP7/AgAFAAEAAAAMAP3/AgAFAAEAAAAMAPz/AgAFAAEAAAAMAPv/AgAFAAEAAAAMAPr/AgAFAAEAAAAMAPn/AgAFAAEAAAAMAPj/AgAFAAAAAAALAP//AgAFAAIAAAALAP7/AgAFAAEAAAALAP3/AgAFAAEAAAALAPz/AgAFAAEAAAALAPv/AgAFAAEAAAALAPr/AgAFAAEAAAALAPn/AgAFAAEAAAALAPj/AgAFAAAAAAAKAP//AgAFAAIAAAAKAP7/AgAFAAEAAAAKAP3/AgAFAAEAAAAKAPz/AgAFAAEAAAAKAPv/AgAFAAEAAAAKAPr/AgAFAAEAAAAKAPn/AgAFAAEAAAAKAPj/AgAFAAAAAAAJAP//AgAFAAIAAAAJAP7/AgAFAAEAAAAJAP3/AgAFAAEAAAAJAPz/AgAFAAEAAAAJAPv/AgAFAAEAAAAJAPr/AgAFAAEAAAAJAPn/AgAFAAEAAAAJAPj/AgAFAAAAAAAIAP//AgAFAAIAAAAIAP7/AgAFAAEAAAAIAP3/AgAFAAEAAAAIAPz/AgAFAAEAAAAIAPv/AgAFAAEAAAAIAPr/AgAFAAEAAAAIAPn/AgAFAAEAAAAIAPj/AgAFAAAAAAAHAP//AgAFAAIAAAAHAP7/AgAFAAEAAAAHAP3/AgAFAAEAAAAHAPz/AgAFAAEAAAAHAPv/AgAFAAEAAAAHAPr/AgAFAAEAAAAHAPn/AgAFAAEAAAAHAPj/AgAFAAAAAAAGAP//AgAFAAIAAAAGAP7/AgAFAAEAAAAGAP3/AgAFAAEAAAAGAPz/AgAFAAEAAAAGAPv/AgAFAAEAAAAGAPr/AgAFAAEAAAAGAPn/AgAFAAEAAAAGAPj/AgAFAAAAAAAFAP//AgAFAAIAAAAFAP7/AgAFAAEAAAAFAP3/AgAFAAEAAAAFAPz/AgAFAAEAAAAFAPv/AgAFAAEAAAAFAPr/AgAFAAEAAAAFAPn/AgAFAAEAAAAFAPj/AgAFAAAAAAAEAP//AgAFAAIAAAAEAP7/AgAFAAEAAAAEAP3/AgAFAAEAAAAEAPz/AgAFAAEAAAAEAPv/AgAFAAEAAAAEAPr/AgAFAAEAAAAEAPn/AgAFAAEAAAAEAPj/AgAFAAAAAAADAP//AgAFAAIAAAADAP7/AgAFAAEAAAADAP3/AgAFAAEAAAADAPz/AgAFAAEAAAADAPv/AgAFAAEAAAADAPr/AgAFAAEAAAADAPn/AgAFAAEAAAADAPj/AgAFAAAAAAACAP//AgAFAAIAAAACAP7/AgAFAAEAAAACAP3/AgAFAAEAAAACAPz/AgAFAAEAAAACAPv/AgAFAAEAAAACAPr/AgAFAAEAAAACAPn/AgAFAAEAAAACAPj/AgAFAAAAAAABAP//AgAFAAIAAAABAP7/AgAFAAEAAAABAP3/AgAFAAEAAAABAPz/AgAFAAEAAAABAPv/AgAFAAEAAAABAPr/AgAFAAEAAAABAPn/AgAFAAEAAAABAPj/AgAFAAAAAAAAAP//AgAFAAIAAAAAAP7/AgAFAAEAAAAAAP3/AgAFAAEAAAAAAPz/AgAFAAEAAAAAAPv/AgAFAAEAAAAAAPr/AgAFAAEAAAAAAPn/AgAFAAEAAAAAAPj/AgAFAAAAAAD/////AgAFAAIAAAD///7/AgAFAAEAAAD///3/AgAFAAEAAAD///z/AgAFAAEAAAD///v/AgAFAAEAAAD///r/AgAFAAEAAAD///n/AgAFAAEAAAD///j/AgAFAAAAAAD+////AgAFAAIAAAD+//7/AgAFAAEAAAD+//3/AgAFAAEAAAD+//z/AgAFAAEAAAD+//v/AgAFAAEAAAD+//r/AgAFAAEAAAD+//n/AgAFAAEAAAD+//j/AgAFAAAAAAD9////AgAFAAIAAAD9//7/AgAFAAEAAAD9//3/AgAFAAEAAAD9//z/AgAFAAEAAAD9//v/AgAFAAEAAAD9//r/AgAFAAEAAAD9//n/AgAFAAEAAAD9//j/AgAFAAAAAAD8////AgAFAAIAAAD8//7/AgAFAAEAAAD8//3/AgAFAAEAAAD8//z/AgAFAAEAAAD8//v/AgAFAAEAAAD8//r/AgAFAAEAAAD8//n/AgAFAAEAAAD8//j/AgAFAAAAAAD7////AgAFAAIAAAD7//7/AgAFAAEAAAD7//3/AgAFAAEAAAD7//z/AgAFAAEAAAD7//v/AgAFAAEAAAD7//r/AgAFAAEAAAD7//n/AgAFAAEAAAD7//j/AgAFAAAAAAD6////AgAFAAIAAAD6//7/AgAFAAEAAAD6//3/AgAFAAEAAAD6//z/AgAFAAEAAAD6//v/AgAFAAEAAAD6//r/AgAFAAEAAAD6//n/AgAFAAEAAAD6//j/AgAFAAAAAAD5////AgAEAAIAAAD5//7/AgAEAAEAAAD5//3/AgAEAAEAAAD5//z/AgAEAAEAAAD5//v/AgAEAAEAAAD5//r/AgAEAAEAAAD5//n/AgAEAAEAAAD5//j/AgAEAAAAAAA=")
tile_set = ExtResource("1_8aya4")

[node name="DecorTileLayet" type="TileMapLayer" parent="tileLayters"]
tile_set = ExtResource("1_8aya4")

[node name="Camera2D2" type="Camera2D" parent="."]
position = Vector2(231, 133)
zoom = Vector2(2.5, 2.5)

[node name="Player" parent="." instance=ExtResource("4_2454q")]
position = Vector2(100, 203)

[node name="sfx" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="coinGrab" type="AudioStreamPlayer2D" parent="sfx"]
stream = ExtResource("7_12ged")

[node name="enter" type="AudioStreamPlayer2D" parent="sfx"]
stream = ExtResource("8_ip2k0")

[node name="bgm" type="AudioStreamPlayer2D" parent="sfx"]
stream = ExtResource("9_b1vsj")
autoplay = true

[node name="characterNoise" type="AudioStreamPlayer2D" parent="sfx"]
stream = ExtResource("10_3dh1o")

[node name="inglooBody" type="Area2D" parent="."]
position = Vector2(239, 166)
script = ExtResource("2_1ob72")

[node name="igooCollsion" type="CollisionShape2D" parent="inglooBody"]
position = Vector2(13, -28)
shape = SubResource("CircleShape2D_rouva")

[node name="eggBoySpeak" type="Label" parent="inglooBody"]
visible = false
z_index = 1
offset_left = 37.0
offset_top = -32.0
offset_right = 200.0
offset_bottom = 17.0
scale = Vector2(0.609378, 1.38149)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Please leave my home"
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="inglooBody"]
position = Vector2(18, -15)
texture = ExtResource("3_gwpf1")

[connection signal="body_entered" from="inglooBody" to="inglooBody" method="_on_body_entered"]
[connection signal="body_exited" from="inglooBody" to="inglooBody" method="_on_body_exited"]
